force-app/main/default/objects/Opp_VP_TeamMember__c/Opp_VP_TeamMember__c.object-meta.xml
<CustomObject>
    <description>This is related with Opportunity Valuation Period Position and HL Internal Team Members</description>
    <label>Opp Valuation Period TeamMember</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opp Valuation Period TeamMembers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>