force-app/main/default/objects/Opp_VP_TeamMember__c/fields/Opportunity_VP_Position__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_VP_Position__c</fullName>
    <label>Opportunity Valuation Period Position</label>
    <referenceTo>Opp_VP_Position__c</referenceTo>
    <relationshipLabel>Opp Valuation Period TeamMembers</relationshipLabel>
    <relationshipName>Opp_VP_TeamMembers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>