force-app/main/default/objects/Opp_VP_TeamMember__c/fields/ResultingEngagemnetRTonVPTM__c.field-meta.xml
<CustomField>
    <fullName>ResultingEngagemnetRTonVPTM__c</fullName>
    <formula>Opportunity_VP_Position__r.Opportunity_VP__r.Opportunity__r.Resulting_Egmt_Record_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ResultingEngagemnetRTonVPTM</label>
    <type>Text</type>
</CustomField>