force-app/main/default/objects/Opp_VP_TeamMember__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Staff</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Opp_PV_TeamMembers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>