force-app/main/default/objects/Opp_VP_TeamMember__c/validationRules/HL_Opp_VP_Member_Creation_lockedEngNoRqs.validationRule-meta.xml
<ValidationRule>
    <fullName>HL_Opp_VP_Member_Creation_lockedEngNoRqs</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(ISNEW(),  AND( ISPICKVAL(Opportunity_VP_Position__r.Opportunity_VP__r.Opportunity__r.Approval_Process__c, &apos;CONVERSION&apos;), ISPICKVAL(Opportunity_VP_Position__r.Opportunity_VP__r.Opportunity__r.Engagement_Approval_Status__c, &apos;Pending&apos;) ) ), true, false)</errorConditionFormula>
    <errorMessage>Valuation Period Team Member can not be created  as Opportunity is locked for Engagement Number Approval Process. Please try once the process is completed or Contact to System Administrator.</errorMessage>
</ValidationRule>