force-app/main/default/objects/Opp_VP_TeamMember__c/validationRules/HL_Opp_VP_Position_Change_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>HL_Opp_VP_Position_Change_Not_Allowed</fullName>
    <active>true</active>
    <description>To stop changing Opportunity VP Position on Opportunity VP Team Member.</description>
    <errorConditionFormula>IF(NOT(ISNEW()),IF(ISCHANGED(Opportunity_VP_Position__c), true, false), false)</errorConditionFormula>
    <errorDisplayField>Opportunity_VP_Position__c</errorDisplayField>
    <errorMessage>You are not allowed to change &apos;Opportunity VP Position&apos;.</errorMessage>
</ValidationRule>