force-app/main/default/objects/Opp_VP_TeamMember__c/validationRules/HL_Opp_VP_TeamMember_Creation_is_locked.validationRule-meta.xml
<ValidationRule>
    <fullName>HL_Opp_VP_TeamMember_Creation_is_locked</fullName>
    <active>true</active>
    <description>To stop creating Opp Valuation Period Team Member if Opportunity is converted.</description>
    <errorConditionFormula>IF(AND(ISNEW(),  Opportunity_VP_Position__r.Opportunity_VP__r.Opportunity__r.Converted_to_Engagement__c), true, false)</errorConditionFormula>
    <errorMessage>Valuation Team Member can not be created once Opportunity is converted into Engagement so please go to related Engagement Valuation Team Member for further creation.</errorMessage>
</ValidationRule>