force-app/main/default/objects/Opp_VP_TeamMember__c/validationRules/HL_Opp_VP_TeamMember_is_locked_EngNoRqst.validationRule-meta.xml
<ValidationRule>
    <fullName>HL_Opp_VP_TeamMember_is_locked_EngNoRqst</fullName>
    <active>true</active>
    <description>To stop changes on VP if related Opportunity is converted in to Engagement</description>
    <errorConditionFormula>IF((AND( NOT(ISNEW()), AND(AND( ISPICKVAL(Opportunity_VP_Position__r.Opportunity_VP__r.Opportunity__r.Approval_Process__c, &apos;CONVERSION&apos;), ISPICKVAL(Opportunity_VP_Position__r.Opportunity_VP__r.Opportunity__r.Engagement_Approval_Status__c, &apos;Pending&apos;) ), NOT(ISCHANGED(Opportunity_VP_Position__c))) )), true, false)</errorConditionFormula>
    <errorMessage>Valuation Period Team Member can not be modified  as Opportunity is locked for Engagement Number Approval Process. Please try once the process is completed or Contact to System Administrator.</errorMessage>
</ValidationRule>