force-app/main/default/objects/Opp_VP_TeamMember__c/validationRules/HL_Opp_VP_TM_Name_Change_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>HL_Opp_VP_TM_Name_Change_Not_Allowed</fullName>
    <active>true</active>
    <description>To stop changing Name on VP Team Member
/* IF(NOT(ISNEW()),IF(ISCHANGED(Name), true, false), false) */</description>
    <errorConditionFormula>IF(NOT(ISNEW()),IF(AND(ISCHANGED(Name),(PRIORVALUE(Name) == Staff__r.FirstName+&apos; &apos;+Staff__r.LastName)), true, false), false)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You are not allowed to change Name.</errorMessage>
</ValidationRule>