force-app/main/default/objects/Opp_VP_TeamMember__c/validationRules/Start_Date_End_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_End_Validation</fullName>
    <active>true</active>
    <description>To keep start date always equal or less than end date.</description>
    <errorConditionFormula>IF( Start_Date__c&gt; End_Date__c , true, false)</errorConditionFormula>
    <errorMessage>Start date cannot be after the end date.</errorMessage>
</ValidationRule>